linux-2.6 (2.6.13+2.6.14-rc4-1) UNRELEASED; urgency=low

  [ Sven Luther ]
  * Temporary branch to sort stuff out locally, until we either upload this
    one instead of 2.6.13-[23], or 2.6.14 is released.

  [ Simon Horman ]
  * Fix genearation of .extraversion (closes: #333842)

 -- Simon Horman <horms@debian.org>  Tue, 18 Oct 2005 15:30:46 +0900

linux-2.6 (2.6.13-2) UNRELEASED; urgency=low

  [ Jurij Smakov ]
  * [i386] Set the CONFIG_HPET_EMULATE_RTC option to make the clock
    work properly on certain Dell machines. This required setting the
    CONFIG_RTC option to 'y' instead of 'm'. (closes: 309909)
    [i386] Enable VIDEO_CX88 and VIDEO_CX88_DVB (both set to 'm') by
    popular demand. (closes: 330916)

  [ Norbert Tretkowski ]
  * [alpha] Update arch/alpha/config for 2.6.13

  [ Kyle McMartin ]
  * [hppa] Oops. Fix linux-headers not including asm-parisc by adding
    headers_dirs = parisc to Makefile.inc.

  [ maximilian attems ]
  * Set CONFIG_FB_VESA=y for i386 and amd64 configs. (closes: #333003)

  [ Sven Luther ]
  * [powerpc] Fixed apus build, now use mkvmlinuz too to generate the vmlinuz
    kernel.
  * Fixed control.image.in to depend on :
      initramfs-tools | yaird | linux-ramdisk-tool
    where linux-ramdisk-tools is the virtual package provided by all
    initrd/initramfs generating tools.

  [ Frederik Schüler ]
  * deactivate FB_RIVA on all architectures.
  * deactivate BLK_DEV_IDESCSI on all architectures.
  * Added patch-2.6.13.4:
    - [SECURITY] key: plug request_key_auth memleak 
      See CAN-2005-3119
    - [SECURITY] Fix drm 'debug' sysfs permissions
      See CAN-2005-3179
    - [SECURITY] Avoid 'names_cache' memory leak with CONFIG_AUDITSYSCALL
    - [SPARC64] Fix userland FPU state corruption.
    - BIC coding bug in Linux 2.6.13
    - [SECURITY] orinoco: Information leakage due to incorrect padding 
      See CAN-2005-3180
    - ieee1394/sbp2: fixes for hot-unplug and module unloading

  [ Christian T. Steigies ]