@@ -7,7 +7,11 @@ linux-2.6 (2.6.13+2.6.14-rc4-1) UNRELEASED; urgency=low
   [ Simon Horman ]
   * Fix genearation of .extraversion (closes: #333842)
 
- -- Simon Horman <horms@debian.org>  Tue, 18 Oct 2005 15:30:46 +0900
+  [ dann frazier ]
+  * Enhance the linux-source description to explain the types of patches
+    Debian adds to it.  (closes: #258043)
+
+ -- dann frazier <dannf@debian.org>  Tue, 18 Oct 2005 13:25:27 -0600
 
 linux-2.6 (2.6.13-2) UNRELEASED; urgency=low
 
